--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
               env:
                 SLACK_CHANNEL: deploys
                 SLACK_COLOR: "#9e2a2b"
-                SLACK_MESSAGE: "Failed deployment😢"
+                SLACK_MESSAGE: "There was an error in the build😢"
                 SLACK_TITLE: "Error"
                 SLACK_USERNAME: Deploy Bot
                 SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
