--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
               env:
                 SLACK_CHANNEL: deploys
                 SLACK_COLOR: "#9e2a2b"
+                SLACK_ICON: https://www.freepik.com/free-icon/alien_14391398.htm#query=bot%20logo&position=19&from_view=search&track=ais
                 SLACK_MESSAGE: "There was an error in the build😢"
                 SLACK_TITLE: "Error"
                 SLACK_USERNAME: Deploy Bot
