--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
               env:
                 SLACK_CHANNEL: deploys
                 SLACK_COLOR: "#9e2a2b"
-                SLACK_ICON: https://www.freepik.com/free-icon/alien_14391398.htm#query=bot%20logo&position=19&from_view=search&track=ais
+                SLACK_ICON: https://cdn-icons-png.flaticon.com/512/427/427995.png?w=740&t=st=1686683003~exp=1686683603~hmac=8aad8cdfe4755475018c53a196d6f5d5480c3c8f8e23cbccaf3f23e7a5582eab
                 SLACK_MESSAGE: "There was an error in the build😢"
                 SLACK_TITLE: "Error"
                 SLACK_USERNAME: Deploy Bot
