--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ name: NodeJS Github Action
 on:
   push:
     branches: [main]
+  pull-request:
+    types: {opened, synchronize, reopened }
 
 jobs:
 
@@ -42,9 +44,23 @@ jobs:
                 SLACK_USERNAME: Slack Bot
                 SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
     
+    sonarcloud:
+      name: SonarCloud
+      needs: [build]
+      runs-on: ubuntu-latest
+      steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    
     deploy:
         name: Deploying
-        needs: [build]
+        needs: [sonarcloud]
         runs-on: ubuntu-latest
 
         steps:
