--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
   pull-request:
-    types: {opened, synchronize, reopened }
+    types: [opened, synchronize, reopened] 
 
 jobs:
 
