--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,11 +2,14 @@ sonar.projectKey=mfacu17_nodejs-ci
 sonar.organization=mfacu17
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=nodejs-ci
-#sonar.projectVersion=1.0
+sonar.projectName=nodejs-ci
+sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=app
+
+# excludes
+sonar.exclusions = app/node_modules/*
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
