--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectName=nodejs-ci
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=app
+sonar.sources=src, tests
 
 # excludes
 sonar.exclusions = app/node_modules/*
